@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.671 2009/11/13 01:48:29 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.672 2009/11/15 13:04:38 mpagano Exp $
+
+*git-sources-2.6.32_rc7-r1 (15 Nov 2009)
+
+  15 Nov 2009; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.32_rc7-r1.ebuild:
+  Version bump
 
   13 Nov 2009; Michael Pagano <mpagano@gentoo.org>
   -git-sources-2.6.32_rc5-r1.ebuild, -git-sources-2.6.32_rc5-r2.ebuild,
